@@ -23,7 +23,6 @@ Test::More = 0.90
 
 [Prereqs / RuntimeRecommends]
 Term::ReadLine::Gnu = 0
-Archive::Tar::Wrapper = 0.15
 ; https://github.com/rjbs/Data-OptList/pull/1
 Data::OptList = 0.110
 
