@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
         - add "dzil authordeps --cpanm-versions"
+        - drop Archive::Tar::Wrapper, which failed when the path contained
+          non-ASCII; the speed improvement was quite small
 
 6.033     2025-05-01 11:45:18-04:00 America/New_York
         - when creating a tarball with GNU tar, use --format=ustar to avoid
